--- a/app/src/main/res/layout-land/main_menu.xml
+++ b/app/src/main/res/layout-land/main_menu.xml
@@ -21,25 +21,27 @@
             android:padding="@dimen/btn_table_padding"
 			android:stretchColumns="*">
 			<TableRow>
-				<Button
-		    		android:id="@+id/main_menu_single_player"
-		    		android:layout_width="fill_parent"
-		    		android:layout_height="wrap_content"
-		    		android:text="@string/menu_single_player"
+                <Button
+                    android:id="@+id/main_menu_single_player"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/menu_single_player"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:textSize="@dimen/btn_text_size"
-                    android:drawableLeft="@drawable/ic_android_black_48dp"
+                    android:drawableLeft="@drawable/ic_person_black_48dp"
+                    android:drawableStart="@drawable/ic_person_black_48dp"
                     android:background="@drawable/btn_selector"/>
-				<Button
-		    		android:id="@+id/main_menu_bluetooth_game"
-		    		android:layout_width="fill_parent"
-		    		android:layout_height="wrap_content"
-		    		android:text="@string/menu_bt_game"
+                <Button
+                    android:id="@+id/main_menu_multi_player"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/menu_multi_player"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:textSize="@dimen/btn_text_size"
-                    android:drawableLeft="@drawable/ic_bluetooth_black_48dp"
+                    android:drawableLeft="@drawable/ic_people_black_48dp"
+                    android:drawableStart="@drawable/ic_people_black_48dp"
                     android:background="@drawable/btn_selector"/>
 			</TableRow>
 			<TableRow>
