--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -28,18 +28,20 @@
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="@dimen/btn_text_size"
-                android:drawableLeft="@drawable/ic_android_black_48dp"
+                android:drawableLeft="@drawable/ic_person_black_48dp"
+                android:drawableStart="@drawable/ic_person_black_48dp"
                 android:background="@drawable/btn_selector"/>
 		
 			<Button 
 		    	android:id="@+id/main_menu_multi_player"
 		    	android:layout_width="fill_parent"
 		    	android:layout_height="wrap_content"
-		    	android:text="Multiplayer Game"
+		    	android:text="@string/menu_multi_player"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="@dimen/btn_text_size"
-                android:drawableLeft="@drawable/ic_bluetooth_black_48dp"
+                android:drawableLeft="@drawable/ic_people_black_48dp"
+                android:drawableStart="@drawable/ic_people_black_48dp"
                 android:background="@drawable/btn_selector"/>
 			
 			<Button 
