--- a/app/src/main/res/layout/multiplayer_menu.xml
+++ b/app/src/main/res/layout/multiplayer_menu.xml
@@ -25,22 +25,24 @@
                 android:id="@+id/multi_player_bluetooth"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Bluetooth"
+                android:text="@string/bluetooth_settings"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="@dimen/btn_text_size"
                 android:drawableLeft="@drawable/ic_bluetooth_black_48dp"
+                android:drawableStart="@drawable/ic_bluetooth_black_48dp"
                 android:background="@drawable/btn_selector"/>
 
             <Button
                 android:id="@+id/multi_player_lan"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Local network"
+                android:text="@string/menu_local_network"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="@dimen/btn_text_size"
-                android:drawableLeft="@drawable/ic_bluetooth_black_48dp"
+                android:drawableLeft="@drawable/ic_router_black_48dp"
+                android:drawableStart="@drawable/ic_router_black_48dp"
                 android:background="@drawable/btn_selector"/>
 
         </LinearLayout>
