--- a/app/src/main/res/layout/nsd.xml
+++ b/app/src/main/res/layout/nsd.xml
@@ -49,36 +49,21 @@
         android:orientation="vertical"
         android:layout_below="@id/separator">
 
-        <RelativeLayout
-            android:id="@+id/layout_paired_devices"
+        <Button
+            android:id="@+id/scan"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/label_paired_devices"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:text="@string/bluetooth_preference_paired_devices"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="@dimen/bt_text_size"/>
-
-            <ListView
-                android:id="@+id/list_paired_devices"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@id/label_paired_devices"/>
-
-        </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:text="Scan"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="@dimen/btn_text_size"
+            android:checked="false"
+            android:background="@drawable/btn_selector"/>
 
         <RelativeLayout
             android:id="@+id/layout_available_devices"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1">
 
             <TextView
