--- a/app/src/main/res/layout/nsd.xml
+++ b/app/src/main/res/layout/nsd.xml
@@ -17,8 +17,8 @@
             android:id="@+id/register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textOn="Unregister"
-            android:textOff="Register"
+            android:textOn="@string/cancel"
+            android:textOff="@string/create"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="@dimen/btn_text_size"
