--- a/app/src/main/res/layout/nsd.xml
+++ b/app/src/main/res/layout/nsd.xml
@@ -25,13 +25,52 @@
             android:checked="false"
             android:background="@drawable/btn_selector"/>
 
-        <TextView
-            android:id="@+id/registration_status"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Not registered"
-            android:textColor="@color/black"
-            android:textSize="@dimen/bt_text_size"/>
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:id="@+id/registration_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="visible">
+
+                <TextView
+                    android:id="@+id/registration_status_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:text="@string/apn_name"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/bt_text_size"/>
+
+                <TextView
+                    android:id="@+id/registration_status_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:text="@string/apn_not_set"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/bt_text_size"
+                    android:layout_toRightOf="@+id/registration_status_label"
+                    android:layout_toEndOf="@+id/registration_status_label" />
+
+            </RelativeLayout>
+
+            <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
+                android:id="@+id/registration_progress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:visibility="invisible"/>
+
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -53,8 +92,8 @@
             android:id="@+id/scan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textOn="Stop Scan"
-            android:textOff="Start Scan"
+            android:textOn="@string/cancel"
+            android:textOff="@string/search_menu"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="@dimen/btn_text_size"
@@ -67,16 +106,6 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/label_available_devices"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:text="Available services"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="@dimen/bt_text_size"/>
-
             <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
                 android:id="@+id/progressBar"
@@ -84,17 +113,6 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/label_available_devices"
                 android:indeterminate="true"
-                android:visibility="gone"/>
-
-            <TextView
-                android:id="@+id/label_no_device_found"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/label_available_devices"
-                android:text="@string/bluetooth_no_devices_found"
-                android:textColor="@color/black"
-                android:textSize="@dimen/bt_text_size"
-                android:padding="@dimen/btn_table_padding"
                 android:visibility="gone"/>
 
             <ListView
