--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,14 @@
 <resources>
     <style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="android:windowBackground">@null</item>
-    </style>>
+    </style>
+
+    <style name="ButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/btn_selector</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/btn_text_size</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
 
 
