--- a/app/src/main/res/layout/online.xml
+++ b/app/src/main/res/layout/online.xml
@@ -1,45 +1,21 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/black">
+    android:layout_height="match_parent"
+    android:background="@drawable/paper_tiled">
 
-    <LinearLayout
-        android:id="@+id/login_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:visibility="visible" >
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <!-- sign-in button -->
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_large"
-            android:text="@string/welcome_to_our_skeleton_app_"
-            android:textAppearance="@style/GuessWordText" />
-
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/sign_in_button"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content" >
-        </com.google.android.gms.common.SignInButton>
-    </LinearLayout>
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/gameplay_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
@@ -126,65 +102,6 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/matchup_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:visibility="gone"
-        tools:context=".SkeletonActivity" >
-
-        <LinearLayout
-            android:id="@+id/secret_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:orientation="vertical"
-            android:visibility="visible"
-            tools:context=".SkeletonActivity"
-            tools:ignore="UselessParent" >
-
-            <TextView
-                android:id="@+id/name_field"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="@dimen/margin_small"
-                android:text=""
-                android:textAppearance="@style/HelpText.Caption" />
-
-            <Button
-                android:id="@+id/sign_out_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/sign_out" />
-
-            <Button
-                android:id="@+id/startMatchButton"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:onClick="onStartMatchClicked"
-                android:text="@string/start_match" />
-
-            <Button
-                android:id="@+id/checkGamesButton"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:onClick="onCheckGamesClicked"
-                android:text="@string/check_games" />
-
-            <Button
-                android:id="@+id/quickMatchButon"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:onClick="onQuickMatchClicked"
-                android:text="@string/quick_match" />
-        </LinearLayout>
-    </RelativeLayout>
-
-    <RelativeLayout
         android:id="@+id/progressLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -199,4 +116,4 @@
             android:layout_centerVertical="true" />
     </RelativeLayout>
 
-</RelativeLayout>
+</FrameLayout>
