--- a/app/src/main/res/layout/online_picker.xml
+++ b/app/src/main/res/layout/online_picker.xml
@@ -10,13 +10,18 @@
         android:id="@+id/button_sign_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="30dp"
         android:visibility="gone" />
 
     <!-- MAIN SCREEN -->
     <LinearLayout
         android:id="@+id/screen_main"
-        style="@style/LLScreen">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <Button
             android:id="@+id/button_quick_game"
@@ -65,7 +70,11 @@
     <!-- "PLEASE WAIT" SCREEN -->
     <LinearLayout
         android:id="@+id/screen_wait"
-        style="@style/LLScreen">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             style="@style/Blurb"
@@ -75,50 +84,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-    </LinearLayout>
-
-    <!-- GAMEPLAY SCREEN -->
-    <LinearLayout
-        android:id="@+id/screen_game"
-        style="@style/LLScreen">
-
-        <TextView
-            android:id="@+id/instructions"
-            style="@style/Instructions"
-            android:text="@string/instructions" />
-
-        <TextView
-            android:id="@+id/my_score"
-            style="@style/ScoreDisplay" />
-
-        <Button
-            android:id="@+id/button_click_me"
-            style="@style/GameButton"
-            android:layout_marginBottom="20dp"
-            android:text="@string/click_me" />
-
-        <TextView
-            android:id="@+id/countdown"
-            style="@style/FigureLabel" />
-
-        <LinearLayout style="@style/ScoresBox">
-
-            <TextView
-                android:id="@+id/score0"
-                style="@style/ScoreText" />
-
-            <TextView
-                android:id="@+id/score1"
-                style="@style/ScoreText" />
-
-            <TextView
-                android:id="@+id/score2"
-                style="@style/ScoreText" />
-
-            <TextView
-                android:id="@+id/score3"
-                style="@style/ScoreText" />
-        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
