--- a/app/src/main/res/layout/activity_online.xml
+++ b/app/src/main/res/layout/activity_online.xml
@@ -1,27 +1,36 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/paper_tiled"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:gravity="center">
 
     <!-- SIGN-IN SCREEN -->
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/button_sign_in"
+    <FrameLayout
+        android:id="@+id/screen_sign_in"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:visibility="gone" />
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@drawable/paper_tiled">
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/button_sign_in"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="30dp"
+            android:visibility="gone" />
+
+    </FrameLayout>
+
 
     <!-- MAIN SCREEN -->
     <LinearLayout
-        android:id="@+id/screen_main"
+        android:id="@+id/screen_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
+        android:layout_height="match_parent"
+        android:padding="30dp"
         android:gravity="center"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:background="@drawable/paper_tiled">
 
         <Button
             android:id="@+id/button_quick_game"
@@ -56,10 +65,12 @@
     <LinearLayout
         android:id="@+id/screen_wait"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
+        android:layout_height="match_parent"
+        android:padding="30dp"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="visible"
+        android:background="@drawable/paper_tiled">
 
         <TextView
             style="@style/Blurb"
@@ -72,8 +83,8 @@
     </LinearLayout>
 
     <include
-        android:id="@+id/game_view"
+        android:id="@+id/screen_game_board"
         layout="@layout/game_board"
-        android:visibility="gone" />
+        android:visibility="invisible" />
 
-</LinearLayout>
+</FrameLayout>
