--- a/app/src/main/res/layout/scores.xml
+++ b/app/src/main/res/layout/scores.xml
@@ -1,88 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:ads="http://schemas.android.com/apk/res-auto"
-	android:orientation="vertical"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:background="#FF000000">
-	
-	<android.support.v4.widget.SwipeRefreshLayout
-		android:id="@+id/swipe_refresh_layout"
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_weight="1">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FF000000">
 
-		<ScrollView
-			android:layout_width="fill_parent"
-			android:layout_height="0dp"
-			android:layout_weight="1"
-			android:scrollbars="vertical">
-			<LinearLayout
-				android:orientation="vertical"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content">
-				<LinearLayout
-					android:orientation="horizontal"
-					android:layout_width="fill_parent"
-					android:layout_height="fill_parent">
-					<TextView
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:text="@string/scores_number"
-						android:textColor="#FFFF00"
-						android:textAppearance="?android:attr/textAppearanceMedium"
-						android:layout_weight="1">
-					</TextView>
-					<TextView
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:text="@string/scores_name"
-						android:textColor="#FFFF00"
-						android:textAppearance="?android:attr/textAppearanceMedium"
-						android:layout_weight="4">
-					</TextView>
-					<TextView
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:text="@string/scores_moves"
-						android:textColor="#FFFF00"
-						android:textAppearance="?android:attr/textAppearanceMedium"
-						android:layout_weight="3">
-					</TextView>
-					<TextView
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:text="@string/scores_time"
-						android:textColor="#FFFF00"
-						android:textAppearance="?android:attr/textAppearanceMedium"
-						android:layout_weight="2">
-					</TextView>
-					<TextView
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:text="@string/scores_status"
-						android:textColor="#FFFF00"
-						android:textAppearance="?android:attr/textAppearanceMedium"
-						android:layout_weight="3">
-					</TextView>
-				</LinearLayout>
-				<TableLayout
-					android:id="@+id/TableLayout111"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content">
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-				</TableLayout>
-			</LinearLayout>
-		</ScrollView>
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scrollbars="vertical">
 
-	</android.support.v4.widget.SwipeRefreshLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/scores_number"
+                        android:textColor="#FFFF00"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:layout_weight="1"></TextView>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/scores_name"
+                        android:textColor="#FFFF00"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:layout_weight="4"></TextView>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/scores_moves"
+                        android:textColor="#FFFF00"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:layout_weight="3"></TextView>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/scores_time"
+                        android:textColor="#FFFF00"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:layout_weight="2"></TextView>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/scores_status"
+                        android:textColor="#FFFF00"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:layout_weight="3"></TextView>
+                </LinearLayout>
+
+                <TableLayout
+                    android:id="@+id/TableLayout111"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content">
+
+                </TableLayout>
+            </LinearLayout>
+        </ScrollView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"/>
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </LinearLayout>
