--- a/app/src/main/res/drawable/btn_normal.xml
+++ b/app/src/main/res/drawable/btn_normal.xml
@@ -7,7 +7,8 @@
     <shape android:shape="rectangle">
         <corners android:radius="@dimen/btn_corner_radius" />
         <solid android:color="#FFFFFF" />
-        <padding android:left="@dimen/btn_padding_horizontal"
+        <padding
+            android:left="@dimen/btn_padding_horizontal"
             android:top="@dimen/btn_padding_vertical"
             android:right="@dimen/btn_padding_horizontal"
             android:bottom="@dimen/btn_padding_vertical" />
