--- a/app/src/main/res/layout-land/multiplayer_menu.xml
+++ b/app/src/main/res/layout-land/multiplayer_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,7 +36,7 @@
                     android:textSize="@dimen/bt_text_size"
                     android:drawableLeft="@drawable/ic_people_48dp"
                     android:drawableStart="@drawable/ic_people_48dp"
-                    android:background="@drawable/btn_selector"/>
+                    android:background="@drawable/btn_selector" />
 
                 <Button
                     android:id="@+id/multi_player_bluetooth"
@@ -50,7 +49,7 @@
                     android:textSize="@dimen/btn_text_size"
                     android:drawableLeft="@drawable/ic_bluetooth_48dp"
                     android:drawableStart="@drawable/ic_bluetooth_48dp"
-                    android:background="@drawable/btn_selector"/>
+                    android:background="@drawable/btn_selector" />
 
             </LinearLayout>
 
@@ -70,7 +69,7 @@
                     android:textSize="@dimen/btn_text_size"
                     android:drawableLeft="@drawable/ic_router_48dp"
                     android:drawableStart="@drawable/ic_router_48dp"
-                    android:background="@drawable/btn_selector"/>
+                    android:background="@drawable/btn_selector" />
 
                 <Button
                     android:id="@+id/multi_player_online"
@@ -83,7 +82,7 @@
                     android:textSize="@dimen/btn_text_size"
                     android:drawableLeft="@drawable/ic_public_48dp"
                     android:drawableStart="@drawable/ic_public_48dp"
-                    android:background="@drawable/btn_selector"/>
+                    android:background="@drawable/btn_selector" />
 
             </LinearLayout>
 
@@ -96,6 +95,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"/>
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </LinearLayout>
