--- a/app/src/main/res/layout/game_board.xml
+++ b/app/src/main/res/layout/game_board.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black">
-      
+
     <by.klnvch.link5dots.GameView
         android:id="@+id/game_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/game_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,7 +31,7 @@
                 android:text="@string/device_info_default"
                 android:gravity="center"
                 android:drawableStart="@drawable/red_dot"
-                android:drawableLeft="@drawable/red_dot"/>
+                android:drawableLeft="@drawable/red_dot" />
 
             <TextView
                 android:id="@+id/opponent_name"
@@ -42,7 +40,7 @@
                 android:gravity="center"
                 android:text="@string/android"
                 android:drawableStart="@drawable/blue_dot"
-                android:drawableLeft="@drawable/blue_dot"/>
+                android:drawableLeft="@drawable/blue_dot" />
 
         </LinearLayout>
 
