--- a/app/src/main/res/layout/how_to.xml
+++ b/app/src/main/res/layout/how_to.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/paper_tiled">
-    
+
     <ScrollView
         android:paddingTop="10dp"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:scrollbars="vertical">
-    
-    	<TextView 
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="@string/how_to_text"
-        	android:textColor="@color/black"
-            android:textSize="@dimen/text_size_help_content"/>
-    
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/how_to_text"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_help_content" />
+
     </ScrollView>
 
     <com.google.android.gms.ads.AdView
@@ -28,6 +27,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"/>
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </LinearLayout>
