--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/paper_tiled"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical">
+
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:scrollbars="vertical">
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
             android:paddingBottom="@dimen/btn_table_padding"
             android:paddingLeft="@dimen/btn_table_padding"
             android:paddingRight="@dimen/btn_table_padding">
-            
+
             <TextView
                 android:id="@+id/hello_user"
                 style="@style/TextAppearance.AppCompat.Headline"
@@ -29,43 +29,43 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:paddingBottom="@dimen/btn_table_padding"
-                android:text=""/>
-            
-			<Button 
-		    	android:id="@+id/main_menu_single_player"
-		    	android:layout_width="fill_parent"
-		    	android:layout_height="wrap_content"
-		    	android:background="@drawable/btn_selector"
+                android:text="" />
+
+            <Button
+                android:id="@+id/main_menu_single_player"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_selector"
                 android:drawableLeft="@drawable/ic_android_48dp"
                 android:drawableStart="@drawable/ic_android_48dp"
                 android:text="@string/menu_single_player"
                 android:textColor="@color/black"
                 android:textSize="@dimen/btn_text_size"
-                android:textStyle="bold"/>
-		
-			<Button 
-		    	android:id="@+id/main_menu_multi_player"
-		    	android:layout_width="fill_parent"
-		    	android:layout_height="wrap_content"
-		    	android:background="@drawable/btn_selector"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/main_menu_multi_player"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_selector"
                 android:drawableLeft="@drawable/ic_person_48dp"
                 android:drawableStart="@drawable/ic_person_48dp"
                 android:text="@string/menu_multi_player"
                 android:textColor="@color/black"
                 android:textSize="@dimen/btn_text_size"
-                android:textStyle="bold"/>
-			
-			<Button 
-		    	android:id="@+id/main_menu_scores"
-		    	android:layout_width="fill_parent"
-		    	android:layout_height="wrap_content"
-		    	android:background="@drawable/btn_selector"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/main_menu_scores"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_selector"
                 android:drawableLeft="@drawable/ic_star_48dp"
                 android:drawableStart="@drawable/ic_star_48dp"
                 android:text="@string/scores_title"
                 android:textColor="@color/black"
                 android:textSize="@dimen/btn_text_size"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -78,7 +78,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/btn_selector"
                     android:contentDescription="@string/settings_label"
-                    android:src="@drawable/ic_settings_48dp"/>
+                    android:src="@drawable/ic_settings_48dp" />
 
                 <ImageButton
                     android:id="@+id/main_menu_how_to"
@@ -87,19 +87,19 @@
                     android:layout_weight="1"
                     android:background="@drawable/btn_selector"
                     android:contentDescription="@string/how_to_title"
-                    android:src="@drawable/ic_help_48dp"/>
+                    android:src="@drawable/ic_help_48dp" />
 
             </LinearLayout>
-			
+
         </LinearLayout>
-    
+
     </ScrollView>
-    
+
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"/>
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </LinearLayout>
