--- a/app/src/main/res/layout/multiplayer_menu.xml
+++ b/app/src/main/res/layout/multiplayer_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,7 +30,7 @@
                 android:textSize="@dimen/bt_text_size"
                 android:drawableLeft="@drawable/ic_people_48dp"
                 android:drawableStart="@drawable/ic_people_48dp"
-                android:background="@drawable/btn_selector"/>
+                android:background="@drawable/btn_selector" />
 
             <Button
                 android:id="@+id/multi_player_bluetooth"
@@ -43,7 +42,7 @@
                 android:textSize="@dimen/btn_text_size"
                 android:drawableLeft="@drawable/ic_bluetooth_48dp"
                 android:drawableStart="@drawable/ic_bluetooth_48dp"
-                android:background="@drawable/btn_selector"/>
+                android:background="@drawable/btn_selector" />
 
             <Button
                 android:id="@+id/multi_player_lan"
@@ -55,7 +54,7 @@
                 android:textSize="@dimen/btn_text_size"
                 android:drawableLeft="@drawable/ic_router_48dp"
                 android:drawableStart="@drawable/ic_router_48dp"
-                android:background="@drawable/btn_selector"/>
+                android:background="@drawable/btn_selector" />
 
             <Button
                 android:id="@+id/multi_player_online"
@@ -67,7 +66,7 @@
                 android:textSize="@dimen/btn_text_size"
                 android:drawableLeft="@drawable/ic_public_48dp"
                 android:drawableStart="@drawable/ic_public_48dp"
-                android:background="@drawable/btn_selector"/>
+                android:background="@drawable/btn_selector" />
 
         </LinearLayout>
 
@@ -78,6 +77,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"/>
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </LinearLayout>
