--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,7 +25,7 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:src="@drawable/ic_mood_48dp"
-            android:contentDescription="@string/apn_user"/>
+            android:contentDescription="@string/apn_user" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,14 +42,14 @@
                 style="@style/TextAppearance.AppCompat.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/apn_user"/>
+                android:text="@string/apn_user" />
 
             <TextView
                 android:id="@+id/username_details"
                 style="@style/TextAppearance.AppCompat.Caption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/device_info_default"/>
+                android:text="@string/device_info_default" />
 
         </LinearLayout>
 
@@ -76,7 +75,7 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:src="@drawable/ic_language_48dp"
-            android:contentDescription="@string/phone_language"/>
+            android:contentDescription="@string/phone_language" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -93,14 +92,14 @@
                 style="@style/TextAppearance.AppCompat.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/phone_language"/>
+                android:text="@string/phone_language" />
 
             <TextView
                 android:id="@+id/language_details"
                 style="@style/TextAppearance.AppCompat.Caption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/language"/>
+                android:text="@string/language" />
 
         </LinearLayout>
 
@@ -126,7 +125,7 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:src="@drawable/ic_info_48dp"
-            android:contentDescription="@string/application_info_label"/>
+            android:contentDescription="@string/application_info_label" />
 
         <TextView
             android:id="@+id/info_title"
@@ -138,7 +137,7 @@
             android:layout_centerVertical="true"
             android:text="@string/application_info_label"
             android:layout_toRightOf="@+id/info_icon"
-            android:layout_toEndOf="@+id/info_icon"/>
+            android:layout_toEndOf="@+id/info_icon" />
 
     </RelativeLayout>
 
