--- a/app/src/main/res/layout/username.xml
+++ b/app/src/main/res/layout/username.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.TextInputLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/input_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,6 +14,6 @@
         android:hint="@string/apn_user"
         android:text="@string/device_info_default"
         android:singleLine="true"
-        android:maxLength="16"/>
+        android:maxLength="16" />
 
 </android.support.design.widget.TextInputLayout>
