--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-	xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_undo"
@@ -10,12 +9,12 @@
 
     <item
         android:id="@+id/menu_new_game"
-		android:icon="@android:drawable/ic_menu_rotate"
-		android:title="@string/end_new_game" />
+        android:icon="@android:drawable/ic_menu_rotate"
+        android:title="@string/end_new_game" />
 
     <item
         android:id="@+id/menu_search"
-		android:icon="@android:drawable/ic_menu_search"
-		android:title="@android:string/search_go"
-        app:showAsAction="always"/>
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@android:string/search_go"
+        app:showAsAction="always" />
 </menu>
