--- a/app/src/main/res/layout/how_to.xml
+++ b/app/src/main/res/layout/how_to.xml
@@ -1,32 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/paper_tiled">
+    android:background="@drawable/paper_tiled"
+    android:padding="10dp"
+    android:scrollbars="vertical">
 
-    <ScrollView
-        android:paddingTop="10dp"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:scrollbars="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/how_to_text"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_help_content" />
-
-    </ScrollView>
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id" />
+        android:text="@string/how_to_text"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_help_content" />
 
-</LinearLayout>
+</ScrollView>
